force-app/main/default/objects/SalesareaAccountRole__c/SalesareaAccountRole__c.object-meta.xml
<CustomObject>
    <description>smartInteract managed read only object.
Models account relationships. Here esp. used to manage the account sales team.</description>
    <label>Salesarea Account  Role</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SalesareaAccountRole</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesarea Account  Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>