force-app/main/default/objects/SalesareaAccountRole__c/fields/eMail__c.field-meta.xml
<CustomField>
    <fullName>eMail__c</fullName>
    <formula>SalesTeamMemberId__r.eMail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eMail</label>
    <type>Text</type>
</CustomField>