force-app/main/default/objects/SalesareaAccountRole__c/fields/RoleCode__c.field-meta.xml
<CustomField>
    <fullName>RoleCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Role Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>