force-app/main/default/objects/SalesareaAccountRole__c/fields/SalesTeamMemberId__c.field-meta.xml
<CustomField>
    <fullName>SalesTeamMemberId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Team Member</label>
    <referenceTo>SalesTeamMember__c</referenceTo>
    <relationshipLabel>Salesarea Account  Roles</relationshipLabel>
    <relationshipName>SalesareaAccountRoles</relationshipName>
    <type>Lookup</type>
</CustomField>