force-app/main/default/objects/SalesareaAccountRole__c/fields/UserAssigned__c.field-meta.xml
<CustomField>
    <fullName>UserAssigned__c</fullName>
    <formula>IF(  OR(ISBLANK(SalesTeamMemberId__r.UserId__c), ISNULL(SalesTeamMemberId__r.UserId__c)),
  &apos;no&apos;,  &apos;yes&apos;  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User assigned</label>
    <type>Text</type>
</CustomField>